--- a/fine-tuning.ipynb
+++ b/fine-tuning.ipynb
@@ -116,7 +116,7 @@
    "outputs": [],
    "source": [
     "training_args = TrainingArguments(\n",
-    "    output_dir=\"C:\\\\Users\\\\Ansh Srivastava\\\\Desktop\\\\BERT-model\",\n",
+    "    output_dir=\"C:\\\\Users\\\\Rajendra\\\\BERT-model\",\n",
     "    evaluation_strategy=\"epoch\",  # Evaluate only at the end of each epoch\n",
     "    learning_rate=2e-5,\n",
     "    per_device_train_batch_size=8,  # Try a higher batch size\n",
